--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node ./dist/app.js",
-    "build": "webpack",
-    "postinstall": "npm run build"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
