--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "node ./dist/app.js",
+    "start": "pm2 stop yogabot && pm2 start ./dist/yogabot.js",
     "build": "webpack"
   },
   "author": "",
