--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node ./dist/yogabot.js",
     "restart": "webpack && pm2 del yogabot && pm2 start ./dist/yogabot.js",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "emoji-regex": "^10.2.1",
     "pg": "^8.10.0",
     "telegraf": "^4.12.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.6.6",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3",
