--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "node ./dist/yogabot.js",
+    "start": "pm2 start ./dist/yogabot.js",
+    "stop": "pm2 del yogabot",
     "restart": "pm2 del yogabot && pm2 start ./dist/yogabot.js",
     "launch": "webpack && pm2 del yogabot && pm2 start ./dist/yogabot.js",
     "build": "webpack",
