--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [ "src/**/*" ],
   "exclude": [ "node_modules", "bundle" ]
