--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "pm2 start ./dist/yogabot.js",
     "stop": "pm2 del yogabot",
     "restart": "pm2 del yogabot && pm2 start ./dist/yogabot.js",
-    "launch": "webpack && pm2 del yogabot && pm2 start ./dist/yogabot.js",
+    "launch": "webpack && pm2 start ./dist/yogabot.js",
+    "relaunch": "webpack && pm2 del yogabot && pm2 start ./dist/yogabot.js",
     "build": "webpack",
     "test": "jest",
     "prismagen": "pnpx prisma generate --schema=./src/prisma/schema.prisma"
@@ -22,6 +23,7 @@
     "@prisma/client": "5.7.0",
     "dotenv": "^16.0.3",
     "emoji-regex": "^10.2.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.10.0",
     "prisma": "^5.7.0",
     "telegraf": "^4.12.2"
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "^18.15.11",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.6.6",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
